--- a/index.ipynb
+++ b/index.ipynb
@@ -2727,7 +2727,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df.Embarked.unique()"
    ]
   },
   {
