Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2728,7 +2728,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.Embarked.unique()"
+    "df.Embarked.unique(),df.Sex.unique()"
    ]
   },
   {
