--- a/index.ipynb
+++ b/index.ipynb
@@ -2723,12 +2723,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['S', 'C', 'Q'], dtype=object),\n",
+       " array(['male', 'female'], dtype=object),\n",
+       " array(['3', '1', '2', '?'], dtype=object),\n",
+       " array([0, 1]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "df.Embarked.unique(),df.Sex.unique(),df.Pclass.unique(),df.Embarked.unique()"
+    "df.Embarked.unique(),df.Sex.unique(),df.Pclass.unique(),df.Survived.unique()"
    ]
   },
   {
