Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2773,7 +2773,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "np.\n",
+    "np.count_nonzero(df.Pclass.values == '?')\n",
     "df.Pclass.values.count_nonzero('?')"
    ]
   },
