Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2772,7 +2772,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "np.count_nonzero(df.Pclass.values == '?')\n",
+    "np.count_nonzero(df.Pclass.values == '?'), \n",
     "# df.Pclass.values.count_nonzero('?')"
    ]
   },
