--- a/index.ipynb
+++ b/index.ipynb
@@ -2772,7 +2772,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "np.count_nonzero(df.Pclass.values == '?'),np.count_nonzero(df.Pclass.values == '') \n",
+    "np.count_nonzero(df.Pclass.values == '?'),np.count_nonzero(df.Pclass.values == '3'),np.count_n\n",
     "# df.Pclass.values.count_nonzero('?')"
    ]
   },
