Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2772,7 +2772,8 @@
    ],
    "source": [
     "# Your code here\n",
-    "np.count_nonzero(df.Pclass.values == '?'),np.count_nonzero(df.Pclass.values == '3'),np.count_n\n",
+    "np.count_nonzero(df.Pclass.values == '?'),np.count_nonzero(df.Pclass.values == '3')\n",
+    "np.count_nonzero(df.Pclass.values == '2'),np.count_nonzero(df.Pclass.values == '?')\n",
     "# df.Pclass.values.count_nonzero('?')"
    ]
   },
