Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2756,24 +2756,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "49"
+       "(172, 201)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "np.count_nonzero(df.Pclass.values == '?'),np.count_nonzero(df.Pclass.values == '3')\n",
-    "np.count_nonzero(df.Pclass.values == '2'),np.count_nonzero(df.Pclass.values == '?')\n",
+    "print(np.count_nonzero(df.Pclass.values == '?'),np.count_nonzero(df.Pclass.values == '3'))\n",
+    "np.count_nonzero(df.Pclass.values == '2'),np.count_nonzero(df.Pclass.values == '1')\n",
     "# df.Pclass.values.count_nonzero('?')"
    ]
   },
