--- a/index.ipynb
+++ b/index.ipynb
@@ -2781,7 +2781,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "()"
    ]
   },
   {
