Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2777,12 +2777,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "891"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "np.Pclass"
+    "len(df.Pclass)"
    ]
   },
   {
