--- a/index.ipynb
+++ b/index.ipynb
@@ -2777,24 +2777,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "891"
+       "938"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "len(df.Pclass)\n",
-    "46"
+    "df.Pclass"
    ]
   },
   {
