Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2793,7 +2793,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.Pclass.val.replace()"
+    "df.Pclass.values.replace('?','')"
    ]
   },
   {
