--- a/index.ipynb
+++ b/index.ipynb
@@ -2777,84 +2777,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      False\n",
-       "1      False\n",
-       "2      False\n",
-       "3      False\n",
-       "4      False\n",
-       "5      False\n",
-       "6      False\n",
-       "7      False\n",
-       "8      False\n",
-       "9      False\n",
-       "10     False\n",
-       "11     False\n",
-       "12     False\n",
-       "13     False\n",
-       "14     False\n",
-       "15     False\n",
-       "16     False\n",
-       "17     False\n",
-       "18     False\n",
-       "19     False\n",
-       "20     False\n",
-       "21     False\n",
-       "22     False\n",
-       "23     False\n",
-       "24     False\n",
-       "25      True\n",
-       "26     False\n",
-       "27     False\n",
-       "28     False\n",
-       "29     False\n",
-       "       ...  \n",
-       "861     True\n",
-       "862    False\n",
-       "863    False\n",
-       "864    False\n",
-       "865    False\n",
-       "866    False\n",
-       "867    False\n",
-       "868    False\n",
-       "869    False\n",
-       "870    False\n",
-       "871    False\n",
-       "872    False\n",
-       "873    False\n",
-       "874    False\n",
-       "875     True\n",
-       "876    False\n",
-       "877    False\n",
-       "878    False\n",
-       "879    False\n",
-       "880    False\n",
-       "881    False\n",
-       "882    False\n",
-       "883    False\n",
-       "884    False\n",
-       "885    False\n",
-       "886    False\n",
-       "887    False\n",
-       "888     True\n",
-       "889    False\n",
-       "890    False\n",
-       "Name: Pclass, Length: 891, dtype: bool"
+       "0      3\n",
+       "1      1\n",
+       "2      3\n",
+       "3      1\n",
+       "4      3\n",
+       "5      3\n",
+       "6      1\n",
+       "7      3\n",
+       "8      3\n",
+       "9      2\n",
+       "10     3\n",
+       "11     1\n",
+       "12     3\n",
+       "13     3\n",
+       "14     3\n",
+       "15     2\n",
+       "16     3\n",
+       "17     2\n",
+       "18     3\n",
+       "19     3\n",
+       "20     2\n",
+       "21     2\n",
+       "22     3\n",
+       "23     1\n",
+       "24     3\n",
+       "25     3\n",
+       "26     3\n",
+       "27     1\n",
+       "28     3\n",
+       "29     3\n",
+       "      ..\n",
+       "861    3\n",
+       "862    1\n",
+       "863    3\n",
+       "864    2\n",
+       "865    2\n",
+       "866    2\n",
+       "867    1\n",
+       "868    3\n",
+       "869    3\n",
+       "870    3\n",
+       "871    1\n",
+       "872    1\n",
+       "873    3\n",
+       "874    2\n",
+       "875    3\n",
+       "876    3\n",
+       "877    3\n",
+       "878    3\n",
+       "879    1\n",
+       "880    2\n",
+       "881    3\n",
+       "882    3\n",
+       "883    2\n",
+       "884    3\n",
+       "885    3\n",
+       "886    2\n",
+       "887    1\n",
+       "888    3\n",
+       "889    1\n",
+       "890    3\n",
+       "Name: Pclass, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "df.Pclass.replace"
+    "df.Pclass.replace('?','3')"
    ]
   },
   {
