--- a/index.ipynb
+++ b/index.ipynb
@@ -2777,84 +2777,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      3\n",
-       "1      1\n",
-       "2      3\n",
-       "3      1\n",
-       "4      3\n",
-       "5      3\n",
-       "6      1\n",
-       "7      3\n",
-       "8      3\n",
-       "9      2\n",
-       "10     3\n",
-       "11     1\n",
-       "12     3\n",
-       "13     3\n",
-       "14     3\n",
-       "15     2\n",
-       "16     3\n",
-       "17     2\n",
-       "18     3\n",
-       "19     3\n",
-       "20     2\n",
-       "21     2\n",
-       "22     3\n",
-       "23     1\n",
-       "24     3\n",
-       "25     3\n",
-       "26     3\n",
-       "27     1\n",
-       "28     3\n",
-       "29     3\n",
-       "      ..\n",
-       "861    3\n",
-       "862    1\n",
-       "863    3\n",
-       "864    2\n",
-       "865    2\n",
-       "866    2\n",
-       "867    1\n",
-       "868    3\n",
-       "869    3\n",
-       "870    3\n",
-       "871    1\n",
-       "872    1\n",
-       "873    3\n",
-       "874    2\n",
-       "875    3\n",
-       "876    3\n",
-       "877    3\n",
-       "878    3\n",
-       "879    1\n",
-       "880    2\n",
-       "881    3\n",
-       "882    3\n",
-       "883    2\n",
-       "884    3\n",
-       "885    3\n",
-       "886    2\n",
-       "887    1\n",
-       "888    3\n",
-       "889    1\n",
-       "890    3\n",
-       "Name: Pclass, Length: 891, dtype: object"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.Pclass.replace('?','3')"
+    "df.Pclass.replace('?','3',inplace=True)"
    ]
   },
   {
