Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2800,7 +2800,8 @@
     "\n",
     "Write your answer below this line:\n",
     "______________________________________________________________________________________________________\n",
-    "\n"
+    "\n",
+    "The benefit i"
    ]
   },
   {
