Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2801,7 +2801,7 @@
     "Write your answer below this line:\n",
     "______________________________________________________________________________________________________\n",
     "\n",
-    "The benefit i"
+    "The benefit is that you are less likely to influes "
    ]
   },
   {
