--- a/index.ipynb
+++ b/index.ipynb
@@ -2801,7 +2801,7 @@
     "Write your answer below this line:\n",
     "______________________________________________________________________________________________________\n",
     "\n",
-    "The benefit is that you are less likely to influence the data, and add bias. The benefit of removing and replacing "
+    "The benefit is that you are less likely to influence the data, and add bias. The benefit of removing and replacing missing values is th"
    ]
   },
   {
