--- a/index.ipynb
+++ b/index.ipynb
@@ -2801,7 +2801,7 @@
     "Write your answer below this line:\n",
     "______________________________________________________________________________________________________\n",
     "\n",
-    "The benefit is that you are less likely to influence the data, and add bias. The benefit of removing and replacing missing values is that you can make estimations and may be able to use more of the data to bring insights. I decided to replace the 79 missing val"
+    "The benefit is that you are less likely to influence the data, and add bias. The benefit of removing and replacing missing values is that you can make estimations and may be able to use more of the data to bring insights. I decided to replace the 79 missing values with 3, because it ma"
    ]
   },
   {
