Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2819,7 +2819,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "df.is_null"
    ]
   },
   {
